kubernetes/airflow-flower-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: airflow
  labels:
    airflow-app: flower
  name: airflow-flower
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 5555
  selector:
    airflow-app: flower
status:
  loadBalancer: {}
