kubernetes/airflow-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: airflow
  labels:
    airflow-app: postgres
  name: airflow-postgres
spec:
  ports:
  - name: "5432"
    port: 5432
    targetPort: 5432
  selector:
    airflow-app: postgres
status:
  loadBalancer: {}
