kubernetes/airflow-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: airflow
  labels:
    airflow-app: redis
  name: airflow-redis
spec:
  ports:
  - name: "6379"
    port: 6379
    targetPort: 6379
  selector:
    airflow-app: redis
status:
  loadBalancer: {}
