kubernetes/airflow-webserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: airflow
  labels:
    airflow-app: webserver
  name: airflow-webserver
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 8080
  selector:
    airflow-app: webserver
status:
  loadBalancer: {}
