kubernetes/airflow-worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: airflow
  labels:
    airflow-app: worker
  name: airflow-worker
spec:
  ports:
  - name: "8793"
    port: 8793
    targetPort: 8793
  selector:
    airflow-app: worker
status:
  loadBalancer: {}
